fix: theme icon mobile size

--- a/src/components/Themes/themes.scss
+++ b/src/components/Themes/themes.scss
@@ -50,6 +50,7 @@
                 font-size: 25px;
             }
             .hackathon-tracks {
+                width: 150px;
                 margin: auto;
                 padding: 3% 0;
             }
